--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+
+	<string name="sample_device_admin_description">用户管理员描述信息</string>
+    <string name="sample_device_admin">设置管理员权限</string>
+	    
+    
 </resources>
